# agentic-blogger

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
config/: agents.yaml  tasks.yaml
output/: articles.json  final_draft.md  initial_draft.md
src/agentic_blogger/: __init__.py  app.py  crew.py  main.py  test.ipynb  util.py  version.py
src/agentic_blogger/crew/: crew.py
src/agentic_blogger/utils/: util.py
